third_party/rust/chromium_crates_io/vendor/zerocopy-v0_8/tests/ui-msrv/try_transmute_ref-size-decrease.stderr
warning: unused variable: `decrease_size`
  --> tests/ui-msrv/try_transmute_ref-size-decrease.rs:19:9
   |
19 |     let decrease_size: Result<&u8, _> = try_transmute_ref!(&AU16(0));
   |         ^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_decrease_size`
   |
   = note: `#[warn(unused_variables)]` on by default

error[E0512]: cannot transmute between types of different sizes, or dependently-sized types
  --> tests/ui-msrv/try_transmute_ref-size-decrease.rs:19:41
   |
19 |     let decrease_size: Result<&u8, _> = try_transmute_ref!(&AU16(0));
   |                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: source type: `AU16` (16 bits)
   = note: target type: `u8` (8 bits)
   = note: this error originates in the macro `$crate::assert_size_eq` (in Nightly builds, run with -Z macro-backtrace for more info)
